Fix option wrapping within tb-toolbar (#5651)
Motivation for features / changes
Long options within a tb-toolbar would wrap in an overlapping way.

Technical description of changes
Added a span around the option, with the non-truncated/full value as the title and the suppressed the wrapping.

--- a/tensorboard/webapp/widgets/dropdown/dropdown_component.scss
+++ b/tensorboard/webapp/widgets/dropdown/dropdown_component.scss
@@ -43,3 +43,7 @@ mat-select:focus {
   white-space: normal;
   word-break: break-all;
 }
+
+.option-content {
+  white-space: nowrap;
+}
